<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unifbv.news.Activities.Ciencia">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />


    <Button
        android:id="@+id/science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:onClick="ScienceOnClick"
        android:text="@string/categoria_ciencia" />

    <Button
        android:id="@+id/tecnology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_toStartOf="@+id/jogos"
        android:onClick="TecnologyOnClick"

        android:text="@string/categoria_tecnologia" />

    <Button
        android:id="@+id/jogos"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_toStartOf="@+id/cinema"
        android:onClick="JogosOnClick"
        android:text="@string/categoria_jogos" />

    <Button
        android:id="@+id/cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:onClick="CinemaOnClick"
        android:text="@string/categoria_cinema" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/science"
        tools:context="unifbv.news"
        android:onClick="ScienceOnClick"
        android:padding="8dp">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>